--- a/src/pages/matches/matches.html
+++ b/src/pages/matches/matches.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Paarungen</ion-title>
   </ion-navbar>
 </ion-header>
 
