--- a/src/pages/matches/matches.html
+++ b/src/pages/matches/matches.html
@@ -17,7 +17,7 @@
 
     <fieldset *ngFor="let i of courts">
         <legend>Platz {{i + 1}}</legend>
-        <ion-list>
+        <ion-list no-lines>
             <ion-item *ngFor="let player of getPlayersPerCourt(i)">
                 {{player.name}}
             </ion-item>
@@ -26,7 +26,7 @@
 
     <fieldset *ngIf="getPlayersForTheBench().length" class="bench">
         <legend>Bank</legend>
-        <ion-list>
+        <ion-list no-lines>
             <ion-item *ngFor="let player of getPlayersForTheBench()">
                 {{player.name}}
             </ion-item>
