move function from template to component

--- a/src/pages/matches/matches.html
+++ b/src/pages/matches/matches.html
@@ -24,10 +24,10 @@
         </ion-list>
     </fieldset>
 
-    <fieldset *ngIf="getPlayersForTheBench().length" class="bench">
+    <fieldset *ngIf="playersForBench.length" class="bench">
         <legend>Bank</legend>
         <ion-list no-lines>
-            <ion-item *ngFor="let player of getPlayersForTheBench()">
+            <ion-item *ngFor="let player of playersForBench">
                 {{player.name}}
             </ion-item>
         </ion-list>
