implement button to load data from google docs

--- a/src/pages/players/players.html
+++ b/src/pages/players/players.html
@@ -18,4 +18,6 @@
             <ion-label>{{player.name}}</ion-label>
         </ion-item>
     </ion-list>
+
+    <br><button ion-button (click)="loadFromGoogleDocs()">von Google-Docs laden</button>
 </ion-content>
