mark players that were on bench already

--- a/src/pages/matches/matches.html
+++ b/src/pages/matches/matches.html
@@ -21,7 +21,7 @@
         <legend>Platz {{i + 1}}</legend>
         <ion-list no-lines>
             <ion-item *ngFor="let player of getPlayersPerCourt(i)">
-                {{player.name}}
+                {{player.name}} <img *ngIf="player.benched" class="benched" src="../../assets/icon/bench.png"/>
             </ion-item>
         </ion-list>
     </fieldset>
@@ -30,7 +30,7 @@
         <legend>Bank</legend>
         <ion-list no-lines>
             <ion-item *ngFor="let player of playersForBench">
-                {{player.name}}
+                {{player.name}} <img *ngIf="player.benched" class="benched" src="../../assets/icon/bench.png"/>
             </ion-item>
         </ion-list>
     </fieldset>
