add 1 court as option to select box

--- a/src/pages/matches/matches.html
+++ b/src/pages/matches/matches.html
@@ -9,6 +9,7 @@
 
     <ion-item no-lines class="select-courts">
         <ion-select [(ngModel)]="numberOfCourts">
+            <ion-option [value]="1">1 Platz</ion-option>
             <ion-option [value]="2">2 Plätze</ion-option>
             <ion-option [value]="3">3 Plätze</ion-option>
             <ion-option [value]="4">4 Plätze</ion-option>
