--- a/src/pages/players/players.html
+++ b/src/pages/players/players.html
@@ -13,9 +13,9 @@
     </ion-item>
 
     <ion-list>
-        <ion-item *ngFor="let player of allPlayers">
+        <ion-item *ngFor="let player of allPlayers; let index = index">
             <ion-checkbox [(ngModel)]="player.selected" (ionChange)="updatePlayers()"></ion-checkbox>
-            <ion-label>{{player.name}} <ion-icon name="trash" (click)="removePlayer($index)" class="remove-player"></ion-icon></ion-label>
+            <ion-label>{{player.name}} <ion-icon name="trash" (click)="removePlayer(index)" class="remove-player"></ion-icon></ion-label>
         </ion-item>
     </ion-list>
 
