--- a/src/pages/matches/matches.html
+++ b/src/pages/matches/matches.html
@@ -21,8 +21,10 @@
     <fieldset *ngFor="let i of courts">
         <legend>Platz {{i + 1}}</legend>
         <ion-list no-lines>
-            <ion-item *ngFor="let player of getPlayersPerCourt(i)">
-                {{player.name}} <img *ngIf="player.benched" class="benched" src="assets/icon/bench.png"/>
+            <ion-item *ngFor="let player of playersPerCourt[i]">
+                {{player.name}}
+                <img *ngIf="player.benched" class="benched" src="assets/icon/bench.png"/>
+                <img *ngIf="player.oneOnOne" class="benched" src="assets/icon/oneOnOne.png"/>
             </ion-item>
         </ion-list>
     </fieldset>
@@ -31,7 +33,9 @@
         <legend>Bank</legend>
         <ion-list no-lines>
             <ion-item *ngFor="let player of playersForBench">
-                {{player.name}} <img *ngIf="player.benched" class="benched" src="assets/icon/bench.png"/>
+                {{player.name}}
+                <img *ngIf="player.benched" class="benched" src="assets/icon/bench.png"/>
+                <img *ngIf="player.oneOnOne" class="benched" src="assets/icon/oneOnOne.png"/>
             </ion-item>
         </ion-list>
     </fieldset>
