--- a/src/pages/matches/matches.html
+++ b/src/pages/matches/matches.html
@@ -16,9 +16,10 @@
         </ion-select>
     </ion-item>
 
-    <br><button ion-button (click)="shuffle()" class="shuffle">Shuffle!</button>
+    <br><button ion-button (click)="shuffle()" class="shuffle" [disabled]="isLoading">Shuffle!</button>
+    <ion-spinner [ngClass]="{'loading': isLoading}"></ion-spinner>
 
-    <fieldset *ngFor="let i of courts">
+    <fieldset *ngFor="let i of courts" [ngClass]="{'loading': isLoading}">
         <legend>Platz {{i + 1}}</legend>
         <ion-list no-lines>
             <ion-item *ngFor="let player of playersPerCourt[i]">
@@ -29,7 +30,7 @@
         </ion-list>
     </fieldset>
 
-    <fieldset *ngIf="playersForBench.length" class="bench">
+    <fieldset *ngIf="playersForBench.length" class="bench" [ngClass]="{'loading': isLoading}">
         <legend>Bank</legend>
         <ion-list no-lines>
             <ion-item *ngFor="let player of playersForBench">
